<resources>
  <string name="app_name">PFM SDK</string>
  <string name="snackbar_utils_error_default">An error has occurred. Please try again later.</string>
  <string name="snackbar_utils_error_status_code_408">Could not connect to Tink servers. Please try again later.</string>
  <string name="snackbar_utils_error_already_exists">Already exists</string>
  <string name="onboarding_new_user_terms_link">https://www.tinkapp.com/en/terms-of-service-international/</string>

  <string name="date_format_human_today">Today</string>
  <string name="date_format_human_yesterday">Yesterday</string>
  <string name="date_format_human_day_before_yesterday">Day before yesterday</string>
  <string name="date_format_human_tomorrow">Tomorrow</string>
  <string name="date_format_human_day_after_tomorrow">Day after tomorrow</string>
  <string name="date_formatter_monthly">yyyy-MM</string>
  <string name="date_formatter_yearly">yyyy</string>
  <string name="date_formatter_week_yearly">xxxx</string>
  <string name="date_formatter_integer_date">yyyyMMdd</string>
  <string name="date_formatter_integer_date_compact">yyMMdd</string>
  <string name="date_formatter_monthly_only">MM</string>
  <string name="date_formatter_monthly_compact">MMM</string>
  <string name="date_formatter_month_name">MMMMM</string>
  <string name="date_formatter_month_name_short">MMMM</string>
  <string name="date_formatter_weekly">xxxx:ww</string>
  <string name="date_formatter_daily">yyyy-MM-dd</string>
  <string name="date_formatter_daily_compact">yy-MM-dd</string>
  <string name="date_formatter_daily_pretty">MMM d</string>
  <string name="date_formatter_daily_monthly">dd MMM</string>
  <string name="date_formatter_daily_monthly_yearly">dd MMM yyyy</string>
  <string name="date_formatter_minutes">yyyy-MM-dd HH:mm</string>
  <string name="date_formatter_seconds">yyyy-MM-dd HH:mm:ss</string>
  <string name="date_formatter_seconds_dashes">yyyy-MM-dd&#45;&#45;HH:mm:ss</string>
  <string name="date_formatter_seconds_t">yyyy-MM-dd\'T\'HH:mm:ss</string>
  <string name="date_formatter_seconds_with_timezone">yyyy-MM-dd HH:mm:ssZ</string>
  <string name="date_formatter_milliseconds_with_timezone">yyyy-MM-dd\'T\'HH:mm:ss.SSSZ</string>
  <string name="date_formatter_time_millis">HH:mm:ss,SSS</string>
  <string name="date_formatter_filename_safe">yyyy-MM-dd&#45;&#45;HH:mm:ss.SSS</string>
  <string name="date_formatter_logging">yyyy-MM-dd HH:mm:ss,SSS</string>
  <string name="date_formatter_day_of_week">EEEE</string>
  <string name="date_formatter_month_and_day_of_week">EEEE MMM d</string>
  <string name="date_formatter_month_and_day">MMMM d</string>
  <string name="date_formatter_month_and_day_and_year">MMMM d yyyy</string>
  <string name="date_formatter_month_and_year">MMMM yyyy</string>
  <string name="date_formatter_month_and_year_compact">MMM yyyy</string>

  <string name="all_categories">All categories</string>

  <string name="overview_title">Overview</string>
  <string name="overview_latest_transactions_title">Latest transactions</string>
  <string name="overview_latest_transactions_view_all_link">See all</string>

  <string name="transaction_similar_title">Similar transactions</string>
  <string name="transaction_similar_description">Do you want to categorize these transactions as well?</string>
  <string name="transaction_similar_button_skip_text">Skip</string>
  <string name="transaction_similar_button_accept_text">Yes, change selected</string>
  <string name="transaction_similar_marker_button_mark_text">Select all</string>
  <string name="transaction_similar_marker_button_unmark_text">Unselect all</string>

  <string name="facebook_app_id" translatable="false">197362113769029</string>
  <string name="amp" translatable="false">&amp;</string>
  <string name="pie_chart_transition" translatable="false">%1$s-pie-chart-transition</string>
  <string name="amount_transition" translatable="false">%1$s-amount-transition</string>
  <string name="amount_title_transition" translatable="false">%1$s-amount-title-transition</string>
  <string name="amount_period_transition" translatable="false">%1$s-amount-period-transition</string>
  <string name="label_transition" translatable="false">%1$s-label-transition</string>
  <string name="label_title_transition" translatable="false">%1$s-label-title-transition</string>
  <string name="label_icon_transition" translatable="false">%1$s-label-icon-transition</string>
  <string name="toolbar_transition" translatable="false">toolbar-transition</string>
  <string name="transition_chart_item" translatable="false">%1$s-transition-chart-item</string>
  <string name="transition_chart_item_amount" translatable="false">%1$s-transition-chart-item-amount</string>
  <string name="filter_search_item" translatable="false">FilterSearchItem</string>
  <string name="alphanumeric_digits" translatable="false">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>

  <string name="choose_category_text">Choose category</string>

  <string name="category_list_fragment_button_text">Select</string>

  <string name="selector_1_months">1 month</string>
  <string name="selector_6_months">6 months</string>
  <string name="selector_12_months">12 months</string>
  <string name="expenses_transactions">transactions</string>
  <string name="expenses_title">Expenses</string>
  <string name="expenses_header_description_average">%s on average per month</string>
  <string name="expenses_6_months_header_description">Spent in the last 6 months</string>
  <string name="expenses_1_year_header_description">Spent in the last year</string>
  <string name="expenses_bundled_transactions">Other</string>
  <string name="left_to_spend_transactions">transactions</string>
  <string name="left_to_spend_title">Left to spend</string>
  <string name="left_to_spend_header_description_more">%s more than usual</string>
  <string name="left_to_spend_header_description_less">%s less than usual</string>
  <string name="left_to_spend_header_description_average">%s on average per month</string>
  <string name="income_transactions">transactions</string>
  <string name="income_title">Income</string>
  <string name="income_header_description_average">%s on average per month</string>
  <string name="income_6_months_header_description">Income the last 6 months</string>
  <string name="income_1_year_header_description">Income the last year</string>
  <string name="income_bundled_transactions">Other</string>

  <string name="left_to_spend_tutorial_description">Left to spend is calculated by subtracting your expenses from your monthly income.</string>
  <string name="left_to_spend_tutorial_description_one">The colored line shows what you have left to spend</string>
  <string name="left_to_spend_tutorial_description_two">The dashed line shows the average amount left to spend during a month</string>
  <string name="left_to_spend_tutorial_description_three">The dot represents what\'s left of your monthly income right now</string>

  <string name="date_span_string">%1$s - %2$s</string>
  <string name="until_next_date">Until %s</string>

  <string name="transactions_list_toolbar_title">Transactions</string>
  <string name="expenses_menu_settings_tite">Transactions</string>
  <string name="other">Other</string>

</resources>
